<resources>
    <string name="app_name">3.1C</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="answer">Answer</string>
    <string name="question_title">Android question title:</string>
    <string name="question_details">Question details go here: ... ... ... ... ... ... ... ... ... ... ... ... ... ...\n... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ...\n... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ...\n... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ...\n</string>
    <string name="welcome">"Welcome "</string>
    <string name="next">Next</string>
    <string name="emptyField">Field cannot be empty</string>
    <string name="invalidAnswer">Invalid answer</string>
    <string name="scoreTitle">YOUR SCORE:</string>
    <string name="congrats">"Congratulations "</string>
    <string name="newQuiz">Take New Quiz</string>
    <string name="finish">Finish</string>
</resources>