<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263143"
    tools:context=".MainActivityA2">

    <ToggleButton
        android:id="@+id/toggleAnswer3"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:clickable="false"
        android:textColor="#000000"
        android:textOff="@string/answer"
        android:textOn="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleAnswer2"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/question"
        android:layout_width="221dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/question_title"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/toggleAnswer2"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:textColor="#000000"
        android:textOff="@string/answer"
        android:textOn="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleAnswer1"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="325dp"
        android:layout_height="36dp"
        android:layout_marginTop="160dp"
        android:max="5"
        android:progress="2"
        android:progressBackgroundTint="#AEAEAE"
        android:progressTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/progressView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="2/5"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toStartOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/questionDetails"
        android:layout_width="368dp"
        android:layout_height="86dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/question_details"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.02" />

    <ToggleButton
        android:id="@+id/toggleAnswer1"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:textColor="#000000"
        android:textOff="@string/answer"
        android:textOn="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionDetails"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:backgroundTint="#2E363C"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleAnswer3"
        app:layout_constraintVertical_bias="0.654"
        app:toggleCheckedStateOnClick="true" />

</androidx.constraintlayout.widget.ConstraintLayout>